--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.20.0",
+    "moxios": "^0.4.0",
     "prettier": "2.0.5",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4"
   }
 }
