--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "testcafe": "testcafe chrome ./src/E2E_tests/e2e.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +49,8 @@
     "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "testcafe": "^1.4.0",
+    "testcafe-reporter-xunit": "^2.1.0"
   }
 }
